--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="color_game.css">
   </head>
   <body>
+    <h1>Color <span id="color-display">RGB</span> Game</h1>
     <div class="container">
       <div class="square"></div>
       <div class="square"></div>
@@ -14,5 +15,8 @@
       <div class="square"></div>
       <div class="square"></div>
     </div>
+    <script type="text/javascript" src="color_game.js">
+      
+    </script>
   </body>
 </html>
