--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>Color <span id="color-display">RGB</span> Game</h1>
+    <div>
+      <span id="message"></span>
+    </div>
     <div class="container">
       <div class="square"></div>
       <div class="square"></div>
@@ -16,7 +19,7 @@
       <div class="square"></div>
     </div>
     <script type="text/javascript" src="color_game.js">
-      
+
     </script>
   </body>
 </html>
