--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <h1>Color <span id="color-display">RGB</span> Game</h1>
-    <div>
+    <div id="stripe">
+      <button id="reset">New Colors</button>
       <span id="message"></span>
     </div>
     <div class="container">
