add difficulties and styling

--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <link rel="stylesheet" type="text/css" href="color_game.css">
   </head>
   <body>
-    <h1>Color <span id="color-display">RGB</span> Game</h1>
+    <h1>Color
+      <br>
+      <span id="color-display">RGB</span>
+      <br>
+      Game</h1>
     <div id="stripe">
       <button id="reset">New Colors</button>
       <span id="message"></span>
+      <button id="easy-button">Easy</button>
+      <button id="hard-button" class="selected">Hard</button>
     </div>
     <div class="container">
       <div class="square"></div>
