--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div id="stripe">
       <button id="reset">New Colors</button>
       <span id="message"></span>
-      <button id="easy-button">Easy</button>
-      <button id="hard-button" class="selected">Hard</button>
+      <button class="difficulty">Easy</button>
+      <button class="difficulty selected">Hard</button>
     </div>
     <div class="container">
       <div class="square"></div>
