add info links and prefix transitions

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>RGB Color Game</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+      crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="color_game.css">
   </head>
   <body>
@@ -25,8 +27,19 @@
       <div class="square"></div>
       <div class="square"></div>
     </div>
+    <br>
+    <section class="info">
+      <a href="https://github.com/vo-eric/RGBColorGame">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/eric-vo-13150b144/">
+        <i class="fab fa-linkedin" aria-hidden="true"></i>
+      </a>
+      <a href="http://www.ericvo.me">
+        <i class="fas fa-user-circle" aria-hidden="true"></i>
+      </a>
+    </section>
     <script type="text/javascript" src="color_game.js">
-
     </script>
   </body>
 </html>
